<resources>
    <string name="app_name">Touching Lives</string>
    <string name="title_activity_program">Program</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_send">Send</string>
    <string name="attendance">Attendance</string>
    <string name="activity">Activity</string>
    <string name="saving">Saving</string>
    <string name="star_chart">Star Chart</string>
    <string name="assessment">Assessment</string>
    <string name="report">Report</string>
    <string name="student_details">Student Details</string>
    <string name="title_activity_programs">Programs</string>
    <string name="menu_share">Share</string>
</resources>

